project1/test/test_11710123_05.out
Error type B at Line 1: Missing closing parenthesis ')'
Error type A at Line 4: unknown lexeme 3a
