project1/test/test_11710123_05.spl
int zhekehaonana(
{
  int a;
  a = 3a;
}